--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
+			<form id="signup-form" method="post" action="http://eepurl.com/hczSNj">
+
+				<input type="submit" value="Click here to sign up" />
 			</form>
 
 		<!-- Footer -->
