--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="http://eepurl.com/hczSNj">
+			<form id="signup-form" method="post" action="https://eepurl.com/hczSNj">
 
 				<input type="submit" value="Click here to sign up" />
 			</form>
